# sas2dbx

./: .gitignore  README.md  pyproject.toml
docs/: sas2dbx-roadmap.md  sas2dbx-whitepaper.md
docs/diagrams/: sas2dbx-architecture.excalidraw  sas2dbx-architecture.mmd
docs/superpowers/plans/: 2026-07-16-sas2dbx-migration-agent.md
docs/superpowers/specs/: 2026-07-16-sas2dbx-migration-agent-design.md
notebooks/: Migrate_Batch.py  Migrate_One.py
sas_migrate/: __init__.py  config.py  execute.py  gateway.py  inventory.py  landing.py  pipeline.py  preprocess.py  repair.py  report.py  statestore.py  translate.py  validate.py
tests/: conftest.py  test_config.py  test_execute.py  test_gateway.py  test_inventory.py  test_landing.py  test_pipeline.py  test_preprocess.py  test_repair.py  test_report.py  test_statestore.py  test_translate_parse.py  test_translate_prompts.py  test_validate_spark.py  test_validate_values.py
tests/fixtures/: included_macro.sas  simple_etl.sas
